--- a/SGrid.html
+++ b/SGrid.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="js/SGrid.js"></script>
+    <script type="text/javascript" src="js/SGrid.min.js"></script>
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/SGrid.css">
     <script>
